[gd_scene load_steps=13 format=3 uid="uid://tjvhrra6pof8"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_j7bru"]
[ext_resource type="Texture2D" uid="uid://dyufpdepkinfc" path="res://resources/grass.png" id="1_pofvf"]
[ext_resource type="Script" path="res://scripts/game.gd" id="2_i2sme"]
[ext_resource type="PackedScene" uid="uid://jybkiicf25ma" path="res://scenes/enemy.tscn" id="3_4v1f2"]
[ext_resource type="Script" path="res://scripts/control.gd" id="4_hdt18"]
[ext_resource type="Script" path="res://scripts/timer.gd" id="4_pgxhw"]
[ext_resource type="Texture2D" uid="uid://brduxhl0lfgwu" path="res://resources/alexander.png" id="5_1dgxs"]
[ext_resource type="Script" path="res://scripts/hero.gd" id="6_ontpq"]
[ext_resource type="Script" path="res://scripts/sword.gd" id="8_murq6"]
[ext_resource type="Texture2D" uid="uid://bupw34e32rndd" path="res://resources/sword.png" id="9_ijg8r"]
[ext_resource type="Script" path="res://scripts/healthbar.gd" id="9_s3835"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fy82c"]
radius = 43.0
height = 132.0

[node name="Node" type="Node"]
script = ExtResource("1_j7bru")

[node name="Game" type="Node2D" parent="."]
script = ExtResource("2_i2sme")
enemyScene = ExtResource("3_4v1f2")

[node name="Grass" type="Sprite2D" parent="Game"]
position = Vector2(687, 413)
scale = Vector2(0.913889, 0.913889)
texture = ExtResource("1_pofvf")
region_rect = Rect2(752, 464.667, 190.667, 88)

[node name="Timer" type="Timer" parent="Game"]
script = ExtResource("4_pgxhw")

[node name="HealthBar" type="ColorRect" parent="Game"]
offset_right = 1151.0
offset_bottom = 18.0
color = Color(1, 0, 0, 1)
script = ExtResource("9_s3835")

[node name="Hero" type="CharacterBody2D" parent="Game"]
position = Vector2(386, 416)
collision_mask = 0
motion_mode = 1
script = ExtResource("6_ontpq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/Hero"]
shape = SubResource("CapsuleShape2D_fy82c")

[node name="Alexander" type="Sprite2D" parent="Game/Hero"]
scale = Vector2(0.188213, 0.188213)
texture = ExtResource("5_1dgxs")

[node name="Sword" type="StaticBody2D" parent="Game/Hero"]
collision_layer = 4
collision_mask = 0
script = ExtResource("8_murq6")

[node name="Sword" type="Sprite2D" parent="Game/Hero/Sword"]
position = Vector2(3, -180)
texture = ExtResource("9_ijg8r")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Game/Hero/Sword"]
position = Vector2(-8.25073, -231.442)
polygon = PackedVector2Array(-5.74927, 104.442, -3.74927, -15.5576, 12.2507, -39.5576, 24.2507, -15.5576, 24.2507, 104.442, 44.2507, 108.442, 44.2507, 120.442, 22.2507, 124.442, 22.2507, 136.442, 12.2507, 144.442, 0.250732, 138.442, -3.74927, 122.442, -17.7493, 120.442, -23.7493, 114.442, -17.7493, 106.442)

[node name="Timer" type="Timer" parent="Game/Hero/Sword"]

[node name="Menu" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_hdt18")
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="Menu"]
layout_mode = 0
offset_left = 448.0
offset_top = 287.0
offset_right = 681.0
offset_bottom = 364.0
theme_override_font_sizes/font_size = 50
text = "START"
metadata/_edit_use_anchors_ = true

[connection signal="gameOver" from="." to="Game" method="game_over"]
[connection signal="gameOver" from="." to="Menu" method="game_over"]
[connection signal="startGame" from="." to="Game" method="start_game"]
[connection signal="startGame" from="." to="Game/Timer" method="start_game"]
[connection signal="startGame" from="." to="Game/HealthBar" method="start_game"]
[connection signal="startGame" from="." to="Menu" method="start_game"]
[connection signal="heroDamaged" from="Game" to="Game/HealthBar" method="health_changed"]
[connection signal="timeout" from="Game/Timer" to="Game" method="spawn"]
[connection signal="gameOver" from="Game/HealthBar" to="." method="game_over"]
[connection signal="timeout" from="Game/Hero/Sword/Timer" to="Game/Hero/Sword" method="switch_active"]
[connection signal="pressed" from="Menu/Button" to="." method="start_game"]
